@@ -119,6 +119,7 @@ var localized_strings,
 			tag_friends_own: "__friendcount__ own",
 			tag_friends_rec: "<a href=\"http://store.steampowered.com/recommended/byfriends/__appid__\">__friendcount__ friends reviewed",
 			inventory_market_text: "Show Market price on inventory page",
+			inventory_nav_text: "Show advanced navigation on inventory page",
 			credits: "Credits",
 			stores: "Stores",
 			stores_all: "Compare all stores",
