@@ -377,6 +377,9 @@
 					<a href="http://enhancedsteam.com/featuredetail.php?id=20" class="help"></a>
 				</li>
 				<li>
+					<input type="checkbox" id="showinvnav"><label for="showinvnav" id="inventory_nav_text">Show advanced navigation on inventory page</label>
+				</li>
+				<li>
 					<input type="checkbox" id="showesbg"><label for="showesbg" id="es_background_text">Set custom background on "Edit Profile" screen</label>
 					<a href="http://enhancedsteam.com/featuredetail.php?id=17" class="help"></a>
 				</li>
